# Bec3Game

./: README.md
project/: CMakeLists.txt
project/Bec3-lib/: CMakeLists.txt
project/Bec3-lib/include/Bec3-lib/: VirtualObject.hpp
project/Bec3-lib/src/: Bec3.cpp  HTTPError.cpp
project/CMake/: FindGLM.cmake
project/assets/conf/: Bec3.json  Bec3.json~
project/assets/models/: Satellite.mtl  Satellite_maya_project.mb
project/template/: CMakeLists.txt  main.cpp
project/template/include/: FakeKeyboard.hpp  debug.hpp  wincompat.h
project/template/shaders/: Color.fs.glsl  Color.vs.glsl  FormColor.fs.glsl  FormColor.vs.glsl  FormTexture.fs.glsl  FormTexture.vs.glsl  model_loading.fs.glsl
project/template/src/: FakeKeyboard.cpp
